[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/MenuPopup.gd" type="Script" id=1]
[ext_resource path="res://Font/Font.tres" type="FontFile" id=2]

[node name="MenuPopup" type="Popup"]
process_mode = 3
offset_right = 40.0
offset_bottom = 40.0
exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 88.0
offset_top = 48.0
offset_right = 232.0
offset_bottom = 176.0
color = Color( 0, 0, 0, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="ColorRect" parent="."]
offset_left = 91.0
offset_top = 50.0
offset_right = 229.0
offset_bottom = 74.0
color = Color( 0.588235, 0.588235, 0.588235, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Resume"]
offset_right = 138.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_shadow_color = Color( 0.313726, 0.313726, 0.313726, 1 )
text = "RESUME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="ColorRect" parent="."]
offset_left = 91.0
offset_top = 75.0
offset_right = 229.0
offset_bottom = 99.0
color = Color( 0.588235, 0.588235, 0.588235, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Restart"]
offset_right = 138.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_shadow_color = Color( 0.313726, 0.313726, 0.313726, 1 )
text = "RESTART"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="ColorRect" parent="."]
offset_left = 91.0
offset_top = 100.0
offset_right = 156.0
offset_bottom = 124.0
color = Color( 0.588235, 0.588235, 0.588235, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Save"]
offset_right = 64.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_shadow_color = Color( 0.313726, 0.313726, 0.313726, 1 )
text = "SAVE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="ColorRect" parent="."]
offset_left = 157.0
offset_top = 100.0
offset_right = 229.0
offset_bottom = 124.0
color = Color( 0.588235, 0.588235, 0.588235, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Load"]
offset_right = 72.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_shadow_color = Color( 0.313726, 0.313726, 0.313726, 1 )
text = "LOAD"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicOn" type="ColorRect" parent="."]
offset_left = 91.0
offset_top = 125.0
offset_right = 156.0
offset_bottom = 149.0
color = Color( 0.588235, 0.588235, 0.588235, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MusicOn"]
offset_right = 64.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_shadow_color = Color( 0.313726, 0.313726, 0.313726, 1 )
text = "MUSIC ON"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicOff" type="ColorRect" parent="."]
offset_left = 157.0
offset_top = 125.0
offset_right = 229.0
offset_bottom = 149.0
color = Color( 0.588235, 0.588235, 0.588235, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MusicOff"]
offset_right = 72.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_shadow_color = Color( 0.313726, 0.313726, 0.313726, 1 )
text = "MUSIC OFF"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowCredits" type="ColorRect" parent="."]
offset_left = 91.0
offset_top = 150.0
offset_right = 229.0
offset_bottom = 174.0
color = Color( 0.588235, 0.588235, 0.588235, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ShowCredits"]
offset_right = 138.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_shadow_color = Color( 0.313726, 0.313726, 0.313726, 1 )
text = "SHOW CREDITS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
